Added disqus shortname

--- a/about/index.html
+++ b/about/index.html
@@ -103,6 +103,8 @@ I love to code. I have a great interest in application development and system pr
 
 <p>Apart from programming, you’ll probably find me playing table tennis or video games, goofing around with my dog (his name is Toby) or listening to music. I also like to try and hack around with linux tools for improving my efficiency (I use Arch linux with i3-gaps as my window manager, Neovim as my default text editor).</p>
 
+<p>{{ template &ldquo;_internal/disqus.html&rdquo; . }}</p>
+
   </article>
 </section>
 
